<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_nav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_pro_display"
            android:textStyle="bold"
            android:text="@string/tickets_screen_title"
            android:textAlignment="center"
            android:textColor="@color/title_color_search_screen"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <FrameLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_home_fields_outer"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nav"
            app:layout_constraintWidth_percent="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_home_fields_inner"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/search_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_search" />

                <LinearLayout
                    android:id="@+id/fields_flow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider_fields_home"
                    android:orientation="vertical"
                    android:paddingVertical="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:showDividers="middle"
                    app:flow_horizontalStyle="spread">

                    <EditText
                        android:id="@+id/upper_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/sf_pro_display"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textAutoComplete"
                        android:hint="@string/departure_placeholder"
                        android:paddingVertical="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_6"
                        android:textCursorDrawable="@drawable/cursor_edittext_home" />

                    <EditText
                        android:id="@+id/lower_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/sf_pro_display"
                        android:hint="@string/arrival_placeholder"
                        android:paddingVertical="8dp"
                        android:importantForAutofill="no"
                        android:inputType="none"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_6"
                        android:textCursorDrawable="@drawable/cursor_edittext_home" />
                </LinearLayout>

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/icon_fields_flow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="search_iv,fields_flow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/musical_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/sf_pro_display"
            android:textStyle="bold"
            android:text="@string/go_musical_flight"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fields" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/offer_rv"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_marginTop="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/card_musical_flight"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/musical_tv" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/bg_show_all_places_btn"
            android:fontFamily="@font/sf_pro_display"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/show_all_places"
            android:textStyle="italic"
            app:backgroundTint="@color/grey_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/offer_rv" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>